--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=premier-stats
 spring.datasource.username=postgres
-spring.datasource.password=1212
+spring.datasource.password=*add password*
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/prem_stats
